@@ -310,6 +310,7 @@
 1) igmpproxy: auto disable Multicast2Unicast in wifi driver if real mulicast route table is empty.<br>
 2) kernel: ralink wifi: fix tx ring full issue at M2U enabled.<br>
 3) kernel: ralink wifi: fix m2u filter tabel. Add MDNS and fix IgmpV3 filter.<br>
+4) kernel: tcp: limit GSO packets to half cwnd.<br>
 <br>
 <br>
 <b>TODO:</b><br>
